# signal_plotter

./: .gitignore  CMakeLists.txt  README.md  nivisadevice.cpp  nivisadevice.h  nivisadeviceinfo.cpp  nivisadeviceinfo.h  nivisagenerator.cpp  nivisagenerator.h  nivisaoscilloscope.cpp  nivisaoscilloscope.h  pngTo2D.pro  scanline_viewer.pro
custom_plot/: CMakeLists.txt  qcustomplot.h
data/000_experiment/: Newfile1.csv  Newfile1_CH2.csv
data/A_330/: Newfile1.csv  Newfile1_CH2.csv
form_ui/: mainwindow.ui
sketches/: envelop.py  envelop_csv_2.py
source/: CMakeLists.txt  lowpass.h  main.cpp  main_window.cpp  main_window.h  math_module.h  median.h  median_cpp.h  signals_eval.cpp  signals_eval.h
tests/: CMakeLists.txt  Levenberg-Marquardt-eigen3.cpp  Levenberg-Marquardt-fit-eigen3.cpp  Levenberg-Marquardt-fit-sin-eigen3.cpp  fft_eigen_test.cpp  lsm_test.cpp  nonlinear-least-sqares-eigen.cpp  test_Gauss.cpp  test_median1d.cpp
